--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
     "sweetalert2": "^10.14.1",
     "web-vitals": "^1.0.1"
   },
