--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -12,15 +12,18 @@
     "@prisma/client": "2",
     "classnames": "^2.2.6",
     "date-fns": "^2.17.0",
+    "final-form": "^4.20.1",
     "gray-matter": "^4.0.2",
     "next": "^10.0.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-final-form": "^6.5.2",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.3",
+    "zod": "^1.11.11"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
