--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -22,6 +22,7 @@
     "react-final-form": "^6.5.2",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
+    "swr": "^0.4.2",
     "tailwindcss": "^2.0.3",
     "zod": "^1.11.11"
   },
