--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -8,12 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@prisma/cli": "2",
     "@prisma/client": "2",
     "classnames": "^2.2.6",
     "date-fns": "^2.17.0",
     "final-form": "^4.20.1",
     "gray-matter": "^4.0.2",
+    "moment": "^2.29.1",
     "next": "^10.0.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
