--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -9,8 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
-    "@prisma/cli": "2",
-    "@prisma/client": "2",
+    "@prisma/client": "^2.18.0",
     "classnames": "^2.2.6",
     "date-fns": "^2.17.0",
     "final-form": "^4.20.1",
@@ -31,6 +30,8 @@
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
-    "typescript": "^4.2.2"
+    "prisma": "^2.18.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   }
 }
