--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -8,14 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hapi/iron": "^6.0.0",
     "@material-ui/core": "^4.11.3",
     "@prisma/client": "^2.18.0",
+    "bcrypt": "^5.0.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.17.0",
     "final-form": "^4.20.1",
     "gray-matter": "^4.0.2",
     "moment": "^2.29.1",
     "next": "^10.0.0",
+    "next-connect": "^0.10.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
@@ -25,10 +30,14 @@
     "remark-html": "^13.0.1",
     "swr": "^0.4.2",
     "tailwindcss": "^2.0.3",
+    "uuid": "^8.3.2",
     "zod": "^1.11.11"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/cookie": "^0.4.0",
     "@types/node": "^14.14.31",
+    "@types/passport-local": "^1.0.33",
     "@types/react": "^17.0.2",
     "prisma": "^2.18.0",
     "ts-node": "^9.1.1",
