--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -11,6 +11,7 @@
     "@hapi/iron": "^6.0.0",
     "@material-ui/core": "^4.11.3",
     "@prisma/client": "^2.18.0",
+    "@types/uuid": "^8.3.0",
     "bcrypt": "^5.0.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.17.0",
@@ -28,6 +29,7 @@
     "react-final-form": "^6.5.2",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
+    "serverless-mysql": "^1.5.4",
     "swr": "^0.4.2",
     "tailwindcss": "^2.0.3",
     "uuid": "^8.3.2",
