--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^14.14.31",
     "@types/passport-local": "^1.0.33",
     "@types/react": "^17.0.2",
+    "cookie": "^0.4.1",
     "prisma": "^2.18.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
