--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/runtime": "^7.13.10",
     "@hapi/iron": "^6.0.0",
     "@material-ui/core": "^4.11.3",
     "@prisma/client": "^2.18.0",
@@ -18,7 +19,7 @@
     "final-form": "^4.20.1",
     "gray-matter": "^4.0.2",
     "moment": "^2.29.1",
-    "next": "^10.0.0",
+    "next": "^10.0.8",
     "next-connect": "^0.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
