--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^4.11.3",
     "@prisma/client": "^2.18.0",
     "@types/uuid": "^8.3.0",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.17.0",
