--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -21,6 +21,7 @@
     "gray-matter": "^4.0.2",
     "moment": "^2.29.1",
     "next": "^10.0.8",
+    "next-auth": "^3.11.2",
     "next-connect": "^0.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
